Past events fix and font size smaller on mobile

--- a/src/pages/[schedule].module.scss
+++ b/src/pages/[schedule].module.scss
@@ -26,7 +26,7 @@
   --second-edition-color-2: hsl(274, 64%, 98%);
   --second-edition-color-3: #f3e4ff;
   --third-edition-color-1: #ff8c72;
-  --third-edition-color-2: #fcf6f5;
+  --third-edition-color-2: #fcf5f5;
   --third-edition-color-3: #fbe9e6;
 }
 
@@ -823,10 +823,12 @@
         flex-grow: 1;
 
         .top {
+          font-size: 9px;
+
           @media (min-width: $screen-lg) {
             margin-bottom: 12px;
+            font-size: 10px;
           }
-          font-size: 10px;
 
           .title-bar {
             display: flex;
@@ -966,6 +968,7 @@
    
     .tags {
       display: flex;
+      flex-wrap: wrap;
       gap: 8px;
       
       > * {
